Changed ReadCertificate and Added UI Design in Student Page